fixed invisible header interaction

--- a/media.css
+++ b/media.css
@@ -22,7 +22,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 322px;
+    height: 122px;
+    max-height: 322px;
     width: 100%;
     transition: background 0.6s cubic-bezier(0.31, 0.85, 0.11, 0.99);
 }
@@ -115,6 +116,7 @@
 /* Menu open */
  
 .menu-open.header {
+    height: 100%;
     background: #000;
 }
 
